move patches to patches/

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         disconnectedCallback () {
-            console.log('connected')
+            console.log('disconnected', this)
         }
 
         attributeChangedCallback (name, oldValue, newValue) {
